[tool.poetry]
name = "pipreqs"
version = "0.5.0"
description = "Pip requirements.txt generator based on imports in project"
authors = ["Vadim Kravcenko <vadim.kravcenko@gmail.com>"]
license = "Apache-2.0"
readme = ["README.rst", "HISTORY.rst"]
packages = [{include = "pipreqs"}]
repository = "https://github.com/bndr/pipreqs"
keywords = ["pip", "requirements", "imports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.scripts]
pipreqs = "pipreqs.pipreqs:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
yarg = "0.1.9"
docopt = "0.6.2"
nbconvert = "^7.11.0"
ipython = "8.12.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
tox = "^4.11.3"
coverage = "^7.3.2"
sphinx = { version = "^7.2.6", python = ">=3.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
